--- a/index.html
+++ b/index.html
@@ -293,7 +293,8 @@
         <i class="ri-arrow-up-line"></i>
     </a>
 
-
+    <!--============ SCROLL REVEAL ============-->
+    <script src="javascript/scrollreveal.min.js"></script>
 </body>
 
 </html>
